# gesh

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: github-actions.yml
api/: owl.gesh.management.xml  owl.gesh.setting.xml
cmake/: CMakeLists.txt  Versions.cmake  version.h.in
src/: CMakeLists.txt  ISettingRule.cpp  ISettingRule.h  ISettingSource.h  log.h  main.cpp  setting.cpp  setting.h  settingInitializer.h  settingInitializerHardcoded.cpp  settingInitializerHardcoded.h  settingReaderFile.cpp  settingReaderFile.h  settingRule.cpp  settingRule.h  settingSource.h  settingSourceDefault.cpp  settingSourceDefault.h  settingTypes.h
src/common/: CMakeLists.txt
src/common/inc/: log.h
src/dbus/: CMakeLists.txt  dbus.md
src/dbus/api/: geshDbusTypes.h  owl.gesh.setting.xml
src/dbus/inc/: dbus.h
src/dbus/src/: dbus.cpp
src/setting/: CMakeLists.txt  setting.md
src/setting/inc/: setting.h  settingInitializerHardcoded.h  settingInterface.h  settingLayer.h  settingReaderFactory.h  settingReaderFile.h  settingRule.h  settingSource.h  settingStorageFile.h  settingTypes.h
src/setting/src/: setting.cpp  settingInitializerHardcoded.cpp  settingLayer.cpp  settingReaderFactory.cpp  settingReaderFile.cpp  settingRule.cpp  settingStorageFile.cpp
src/setting/tests/: test_access.cpp  test_general.cpp  test_rules.cpp  test_stubs.h
